<resources>
    <string name="app_name">PatPat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_onboarding_one">고민이 있나요?</string>
    <string name="next">다음</string>
    <string name="title_onboarding_two">다양한 매력을 가진\n챗봇에게 고민을 털어놓고\n편지를 받아 보세요.</string>
    <string name="start">시작하기</string>
    <string name="check">확인</string>
    <string name="title_join_complete">회원가입 완료!</string>
    <string name="title_join_nick_name">어떻게 불러드릴까요?</string>
    <string name="nick_name_hint">닉네임 입력</string>
    <string name="title_join_mbti">MBTI를 알려 주세요!</string>
    <string name="sub_title_join_mbti">나에게 맞는 친구를 추천해 드려요.</string>
    <string name="alert_info_join_mbti">나중에 다시 설정할 수 있으니 걱정 마세요!</string>
    <string name="title_login">고민 상담을 하러 가볼까요?</string>
    <string name="back">뒤로가기</string>
    <string name="skip">건너뛰기</string>

    <string name="bokname_introduction">위로가 필요하다면?\n언제나 내 편 복남이</string>
    <string name="doctor_introduction">현실적인 조언을\n주는 똑똑한 박사님</string>
    <string name="kwak_introduction">조금 과격해 보여도\n재미있는 N행시 장인</string>
    <string name="coco_introduction">까칠해도 매력있는\n츤데레 고양이</string>
    <string name="talk">대화하기</string>
    <string name="bokname_introduction_detail">안녕! 난 복남이야!\n네가 힘들 땐 언제나\n네 편이 되어줄게! 🐶</string>
    <string name="doctor_introduction_detail">젊은이, 무슨 일이신가?\n이 냉철한 박사와 함께라면\n뭐든 해결 가능하다네. 👨🏼‍</string>
    <string name="kwak_introduction_detail">걱정들 하지 마라\n웃음으로다가\n다 날리뿌자! 😆</string>
    <string name="coco_introduction_detail">좀 냉정해 보여도\n난 결국 네 편이야.\n너, 최고야! 🐱</string>


    <string name="letterPs1">PS. 기분이 안 좋을 땐 이런 걸 해보자! 🐶</string>
    <string name="letterFrom1">From. 최고의 친구 복남이가</string>

    <string name="letterPs2">PS. 자네를 위한 나의 조언은 이거야 🖋</string>
    <string name="letterFrom2">From. 자네를 응원하는 닥터 냉철한</string>

    <string name="letterPs3">PS. 웃음이 보약인기라!! 😝</string>
    <string name="letterFrom3">From. 언제나 유쾌한 곽.두.팔</string>

    <string name="letterPs4">PS. 새겨 들어라 😼</string>
    <string name="letterFrom4">From. 코코</string>
    <string name="save_letter_prompt">대화를 종료하고,\n%s의 편지를 받아보시겠어요?</string>
    <string name="user_name_letter">%1$s에게</string>
    <string name="letter_ps_boknam">PS. 기분이 안 좋을 땐 이런 걸 해보자! 🐶</string>
    <string name="letter_ps_doctor">PS. 자네를 위한 나의 조언은 이거야 🖋</string>
    <string name="letter_ps_kwak">PS. 웃음이 보약인기라!! 😝</string>
    <string name="letter_ps_coco">PS. 새겨 들어라 😼</string>
    <string name="example_letter_content">붕붕아 중요한 발표가 있어서 긴장된다고 했지이~? 그치만 잘 할 수 있을거라고 믿어~! 열심히 준비 했으니까 잘 할 수 있을 것 같아~! 정말 느낌이 좋다니까? 자신을 한 번 믿어봐~ 나는 항상 널 믿어~! 지금까지 쭉 잘 해왔듯이 앞으로도 잘할어야아~! 그래도 너무 긴장이 되면, 아이스크림을 먹어 봐! 우리 집에 놀러오면 직접 만든 아이스크림을 줄게.</string>

</resources>