<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_back_join_mbti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textAppearance="@style/Typography.Bold16"
            android:textColor="@color/grayScale400"
            android:textSize="14sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView_skip_join_mbti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textAppearance="@style/Typography.Bold16"
            android:textColor="@color/grayScale400"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textView_title_join_mbti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/title_join_mbti"
        android:textAppearance="@style/Typography.Bold22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_sub_title_join_mbti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_title_join_mbti"
        android:textAppearance="@style/Typography.Medium16"
        android:textColor="@color/grayScale400"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title_join_mbti" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_join_mbti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_sub_title_join_mbti">

        <EditText
            android:id="@+id/edit_text_first_join_mbti"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_underline"
            android:enabled="false"
            android:textAlignment="center"
            android:textAppearance="@style/Typography.Bold22"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_text_second_join_mbti"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_underline"
            android:enabled="false"
            android:textAlignment="center"
            android:textAppearance="@style/Typography.Bold22"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_text_third_join_mbti"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_underline"
            android:enabled="false"
            android:textAlignment="center"
            android:textAppearance="@style/Typography.Bold22"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edit_text_fourth_join_mbti"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edit_text_underline"
            android:enabled="false"
            android:textAlignment="center"
            android:textAppearance="@style/Typography.Bold22"
            android:textColor="@color/black" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/textView_alert_info_join_mbti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/alert_info_join_mbti"
        android:textAppearance="@style/Typography.Medium12"
        android:textColor="@color/grayScale400"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_join_mbti" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/imageView_dot_join_mbti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_alert_info_join_mbti">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_first_mbti"
            android:layout_width="76dp"
            android:layout_height="87dp"
            android:layout_marginEnd="40dp"
            android:backgroundTint="#EDEDED"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_first_mbti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="I"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_second_mbti"
            android:layout_width="76dp"
            android:layout_height="87dp"
            android:backgroundTint="#EDEDED"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_second_mbti"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="E"
                    android:textAlignment="center"
                    android:textColor="@color/green"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/imageView_dot_join_mbti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:src="@drawable/ic_dot_two"
        app:layout_constraintBottom_toTopOf="@+id/button_start_join_mbti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_start_join_mbti"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/bg_gray_r15"
        android:stateListAnimator="@null"
        android:text="@string/start"
        android:textAppearance="@style/Typography.Bold18"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>